2 April 2025: Yorgos
	- Merge #1262 from markyang92, fix build with
	  'gcc-15 -Wbuiltin-declaration-mismatch' error in compat/malloc.c.
	- For #1262, ifdef is no longer needed.

2 April 2025: Wouter
	- Fix unbound-control test so it counts the new flush_negative output,
	  also answers the _ta probe from testns and prints command output
	  and skip a thread specific test when no threads are available.
	- Fix that ub_event has the facility to deal with callbacks for
	  fast reload, doq, windows-stop and dnstap.
	- Fix fast reload test to check if pid exists before acting on it.

1 April 2025: Wouter
	- Fix escape more characters when printing an RR type with an unquoted
	  string.
	- Enable the auth_tls.tdir and auth_tls_failcert.tdir tests.

31 March 2025: Wouter
	- iana portlist update.
	- Merge #1042: Fast Reload. The unbound-control fast_reload is added.
	  It reads changed config in a thread, then only briefly pauses the
	  service threads, that keep running. DNS service is only interrupted
	  briefly, less than a second.
	- Skip the unit tests for auth_tls.tdir and auth_tls_failcert.tdir.

27 March 2025: Wouter
	- Fix unit test dname log printout typecast.
	- Fix for ci test, expat is installed on the osx image.

26 March 2025: Yorgos
	- Fix #1255: Multiple pinnings to vulnerable copies of libexpat.
	- For #1255, for ios use an older expat version that does not require
	  C++11 language features.
	- For #1255, for ios disable building tests that require C++11.
	- For #1255, for ios try the latest expat version again.

24 March 2025: Wouter
	- Fix #1254: `send failed: Socket is not connected` and
	  `remote address is 0.0.0.0 port 53`.

21 March 2025: Wouter
	- Fix #1253: Cache entries fail to be removed from Redis cachedb
	  backend with unbound-control flush* +c.
	- Fix for #1253: Fix for redis cachedb backend to expect an integer
	  reply for the EXPIRE command.

20 March 2025: Wouter
	- Fix print of RR type NSAP-PTR, it is an unquoted string.
